<resources>
    <string name="app_name">AiTCM</string>
    <string name="function1">&#160;&#160;&#160;&#160;&#160;本产品致力于中医药健康管理服务，可根据用户的体质特点从情志调摄、饮食调养、起居调摄等方面进行相应的中医药保健指导。</string>
    <string name="function2">&#160;&#160;&#160;&#160;&#160;个人体质可以通过“舌苔检测”和“体质测试”来确定。</string>
    <string name="function3">&#160;&#160;&#160;&#160;&#160;舌苔检测上传舌头图片后，会反馈测试结果。</string>
    <string name="function4">&#160;&#160;&#160;&#160;&#160;体质测试可根据自己近一年来的体验和感觉，问卷提交后会反馈测试结果。</string>
    <string name="function5">&#160;&#160;&#160;&#160;&#160;得知个人体质后，直接点击调理方案或者点击个人中心查看调理方案进行个人体质的改善。也可以在线咨询中医获得体质就结果并得到相应的调理方案。</string>

    <string name="constitution1">1.形体特征：体形匀称健壮。\n2.常见表现：面色、 肤色润泽，头发稠密有光泽，目光有神，鼻色明润，嗅觉通利，唇色红润，不易疲劳，精力充沛，耐受寒热，睡眠良好，胃纳佳，二便正常，舌色淡红，苔薄白，脉 和缓有力。\n3.心理特征：性格随和开朗。\n4.发病倾向：平素患病较少。\n5.对外界环境适应能力：对自然环境和社会环境适应能力较强。\n</string>
    <string name="constitution2">1.形体特征：体形偏瘦。\n2.常见表现：手足心热，口燥 咽干，鼻微干，喜冷饮，大便干燥，舌红少津，脉细数。\n3.心理特征：性情急躁，外向好动，活泼。\n4.发病倾向：易患虚劳、失精、不寐等病；感邪易 从热化。\n5.对外界环境适应能力：耐冬不耐夏；不耐受暑、热、燥邪。\n</string>
    <string name="constitution3">1.形体特征：肌肉松软不实。\n2.常见表现：平素畏冷，手足不温，喜热饮食，精神不振，舌淡胖嫩，脉沉迟。\n3.心理特征：性格多沉静、内向。\n4.发病倾向：易患痰饮、肿胀、泄泻等病；感邪易从寒化。\n5.对外界环境适应能力：耐夏不耐冬；易感风、寒、湿邪。\n</string>
    <string name="constitution4">1.形体特征：肌肉松软不实。\n2.常见表现：平素语音低 弱，气短懒言，容易疲乏，精神不振，易出汗，舌淡红，舌边有齿痕，脉弱。\n3.心理特征：性格内向，不喜冒险。\n4.发病倾向：易患感冒、内脏下垂等 病；病后康复缓慢。\n5.对外界环境适应能力：不耐受风、寒、暑、湿邪。\n</string>
    <string name="constitution5">1.形体特征：形体瘦者为多。\n2.常见表现：神情抑郁，情感脆弱，烦闷不乐，舌淡红，苔薄白，脉弦。\n3.心理特征：性格内向不稳定、敏感多虑。\n4.发病倾向：易患脏躁、梅核气、百合病及郁证等。\n5.对外界环境适应能力：对精神刺激适应能 力较差；不适应阴雨天气。\n</string>
    <string name="constitution6">1.形体特征：形体中等或偏瘦。\n2.常见表现：面垢油光，易生痤疮，口苦口干，身重困倦，大便黏滞不畅或燥结，小便短黄，男性易阴囊潮湿，女性易带下增多， 舌质偏红，苔黄腻，脉滑数。\n3.心理特征：容易心烦急躁。\n4.发病倾向：易患疮疖、黄疸、热淋等病。\n5.对外界环境适应能力：对夏末秋初湿热 气候，湿重或气温偏高环境较难适应。\n</string>
    <string name="constitution7">1.形体特征：体形肥胖，腹部肥满松软。\n2.常见表现：面部皮肤油脂较多，多汗且黏，胸闷，痰多，口黏腻或甜，喜食肥甘甜黏，苔腻，脉滑。\n3.心理特征：性格偏温和、稳重，多善于忍耐。\n4.发病倾向：易患消渴、中风、胸痹等病。\n5.对外界环境适应 能力：对梅雨季节及湿重环境适应能力差。\n</string>
    <string name="constitution8">1.形体特征：胖瘦均见。\n2.常见表现：肤色晦黯，色素沉着，容易出现瘀斑，口唇黯淡，舌黯或有瘀点，舌下络脉紫黯或增粗，脉涩。\n3.心理特征：易烦，健忘。\n4.发病倾向：易患癥瘕及痛证、血证等。\n5.对外界环境适应能力：不耐受寒邪。\n</string>
    <string name="constitution9">1.形体特征：过敏体质者一般无特殊；先天禀赋异常者或有畸形，或有生理缺陷。\n2.常见表现：过敏体质者常见哮喘、风团、咽痒、鼻塞、喷嚏等；患遗传性疾病者有垂直遗传、先天性、家族性特征；患胎传性疾病者具有母体影响胎儿个体生长发育及相关疾病特征。\n3.心理特征：随禀质不同情况各异。\n4.发病倾向：过敏体质者易 患哮喘、荨麻疹、花粉症及药物过敏等；遗传性疾病如血友病、先天愚型等；胎传性疾病如五迟（立迟、行迟、发迟、齿迟和语迟）、五软（头软、项软、手足软、 肌肉软、口软）、解颅、胎惊等。\n5.对外界环境适应能力：适应能力差，如过敏体质者对易致过敏季节适应能力差，易引发宿疾。\n</string>

</resources>
