<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    android:orientation="vertical">

    <!--用于修改状态栏的背景颜色-->
    <LinearLayout
        android:id="@+id/statuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:orientation="horizontal"></LinearLayout>

    <!--第一部分标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/mainColor"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textSize="16sp"
                android:textColor="#ffffff" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/down"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-100dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="首页"/>

    </LinearLayout>

    <!--中间主体-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--轮播图-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/vp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dip"
                        android:layout_gravity="bottom"
                        android:background="#33000000"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dip"
                            android:layout_marginTop="3dip"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/dot_0"
                                android:layout_width="15dip"
                                android:layout_height="15dip"
                                android:layout_marginLeft="2dip"
                                android:layout_marginRight="2dip"
                                android:background="@drawable/dot_focused" />

                            <View
                                android:id="@+id/dot_1"
                                android:layout_width="15dip"
                                android:layout_height="15dip"
                                android:layout_marginLeft="2dip"
                                android:layout_marginRight="2dip"
                                android:background="@drawable/dot_normal" />

                            <View
                                android:id="@+id/dot_2"
                                android:layout_width="15dip"
                                android:layout_height="15dip"
                                android:layout_marginLeft="2dip"
                                android:layout_marginRight="2dip"
                                android:background="@drawable/dot_normal" />
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

            </RelativeLayout>

            <!--快速入口-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/tongue" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="#ffffff">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/physique" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/doctor" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--功能介绍-->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:text="功能介绍"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/function1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/function2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/function3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/function4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/function5" />
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <!--底部导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/mainColor"
            android:layout_height="3dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/click_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/is_home" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"
                    android:layout_marginTop="-2dp"
                    android:textColor="@color/mainColor"
                    android:text="首页"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/click_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!--用来显示消息的气泡-->
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/not_message" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp">
                        <TextView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/tips_circle"
                            android:gravity="center"
                            android:text="5"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/white" />
                    </FrameLayout>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"
                    android:layout_marginTop="-2dp"
                    android:textColor="@color/fontColor"
                    android:text="消息"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/click_market"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/not_market" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"
                    android:layout_marginTop="-2dp"
                    android:textColor="@color/fontColor"
                    android:text="商城"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/click_me"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:background="@drawable/not_me" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="10sp"
                    android:layout_marginTop="-2dp"
                    android:textColor="@color/fontColor"
                    android:text="我的"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

